// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpScreen should render default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignUpScreen
    error=""
    loading={false}
    onError={[MockFunction]}
    onLoad={[MockFunction]}
    onLoadEnd={[MockFunction]}
    onLoadStart={[MockFunction]}
    onMessage={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        "",
        <WebView
          injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
          onError={[MockFunction]}
          onLoad={[MockFunction]}
          onLoadEnd={[MockFunction]}
          onLoadStart={[MockFunction]}
          onMessage={[MockFunction]}
          originWhitelist={
            Array [
              "*",
            ]
          }
          scalesPageToFit={true}
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
          "onError": [MockFunction],
          "onLoad": [MockFunction],
          "onLoadEnd": [MockFunction],
          "onLoadStart": [MockFunction],
          "onMessage": [MockFunction],
          "originWhitelist": Array [
            "*",
          ],
          "scalesPageToFit": true,
          "source": Object {
            "uri": undefined,
          },
          "style": Object {
            "borderColor": "red",
            "borderWidth": 1,
            "flex": 1,
            "marginTop": 60,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          "",
          <WebView
            injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
            onError={[MockFunction]}
            onLoad={[MockFunction]}
            onLoadEnd={[MockFunction]}
            onLoadStart={[MockFunction]}
            onMessage={[MockFunction]}
            originWhitelist={
              Array [
                "*",
              ]
            }
            scalesPageToFit={true}
            source={
              Object {
                "uri": undefined,
              }
            }
            style={
              Object {
                "borderColor": "red",
                "borderWidth": 1,
                "flex": 1,
                "marginTop": 60,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
            "onError": [MockFunction],
            "onLoad": [MockFunction],
            "onLoadEnd": [MockFunction],
            "onLoadStart": [MockFunction],
            "onMessage": [MockFunction],
            "originWhitelist": Array [
              "*",
            ],
            "scalesPageToFit": true,
            "source": Object {
              "uri": undefined,
            },
            "style": Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SignUpScreen should render with error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignUpScreen
    error="There was an error"
    loading={false}
    onError={[MockFunction]}
    onLoad={[MockFunction]}
    onLoadEnd={[MockFunction]}
    onLoadStart={[MockFunction]}
    onMessage={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        false,
        <Component>
          ERROR!!
        </Component>,
        <WebView
          injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
          onError={[MockFunction]}
          onLoad={[MockFunction]}
          onLoadEnd={[MockFunction]}
          onLoadStart={[MockFunction]}
          onMessage={[MockFunction]}
          originWhitelist={
            Array [
              "*",
            ]
          }
          scalesPageToFit={true}
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "ERROR!!",
        },
        "ref": null,
        "rendered": "ERROR!!",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
          "onError": [MockFunction],
          "onLoad": [MockFunction],
          "onLoadEnd": [MockFunction],
          "onLoadStart": [MockFunction],
          "onMessage": [MockFunction],
          "originWhitelist": Array [
            "*",
          ],
          "scalesPageToFit": true,
          "source": Object {
            "uri": undefined,
          },
          "style": Object {
            "borderColor": "red",
            "borderWidth": 1,
            "flex": 1,
            "marginTop": 60,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          false,
          <Component>
            ERROR!!
          </Component>,
          <WebView
            injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
            onError={[MockFunction]}
            onLoad={[MockFunction]}
            onLoadEnd={[MockFunction]}
            onLoadStart={[MockFunction]}
            onMessage={[MockFunction]}
            originWhitelist={
              Array [
                "*",
              ]
            }
            scalesPageToFit={true}
            source={
              Object {
                "uri": undefined,
              }
            }
            style={
              Object {
                "borderColor": "red",
                "borderWidth": 1,
                "flex": 1,
                "marginTop": 60,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "ERROR!!",
          },
          "ref": null,
          "rendered": "ERROR!!",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
            "onError": [MockFunction],
            "onLoad": [MockFunction],
            "onLoadEnd": [MockFunction],
            "onLoadStart": [MockFunction],
            "onMessage": [MockFunction],
            "originWhitelist": Array [
              "*",
            ],
            "scalesPageToFit": true,
            "source": Object {
              "uri": undefined,
            },
            "style": Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SignUpScreen should render with loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignUpScreen
    error=""
    loading={true}
    onError={[MockFunction]}
    onLoad={[MockFunction]}
    onLoadEnd={[MockFunction]}
    onLoadStart={[MockFunction]}
    onMessage={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Component>
          LOADING
        </Component>,
        "",
        <WebView
          injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
          onError={[MockFunction]}
          onLoad={[MockFunction]}
          onLoadEnd={[MockFunction]}
          onLoadStart={[MockFunction]}
          onMessage={[MockFunction]}
          originWhitelist={
            Array [
              "*",
            ]
          }
          scalesPageToFit={true}
          source={
            Object {
              "uri": undefined,
            }
          }
          style={
            Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
              "opacity": 0,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "LOADING",
        },
        "ref": null,
        "rendered": "LOADING",
        "type": [Function],
      },
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
          "onError": [MockFunction],
          "onLoad": [MockFunction],
          "onLoadEnd": [MockFunction],
          "onLoadStart": [MockFunction],
          "onMessage": [MockFunction],
          "originWhitelist": Array [
            "*",
          ],
          "scalesPageToFit": true,
          "source": Object {
            "uri": undefined,
          },
          "style": Object {
            "borderColor": "red",
            "borderWidth": 1,
            "flex": 1,
            "marginTop": 60,
            "opacity": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Component>
            LOADING
          </Component>,
          "",
          <WebView
            injectedJavaScript="
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
"
            onError={[MockFunction]}
            onLoad={[MockFunction]}
            onLoadEnd={[MockFunction]}
            onLoadStart={[MockFunction]}
            onMessage={[MockFunction]}
            originWhitelist={
              Array [
                "*",
              ]
            }
            scalesPageToFit={true}
            source={
              Object {
                "uri": undefined,
              }
            }
            style={
              Object {
                "borderColor": "red",
                "borderWidth": 1,
                "flex": 1,
                "marginTop": 60,
                "opacity": 0,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "LOADING",
          },
          "ref": null,
          "rendered": "LOADING",
          "type": [Function],
        },
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "injectedJavaScript": "
    window.postMessage = window.originalPostMessage || window.postMessage;
    var signUpBtn = document.getElementById(\\"signup\\");
    signUpBtn.addEventListener('click', function(event) {
        window.postMessage(\\"signedup\\");
    });
",
            "onError": [MockFunction],
            "onLoad": [MockFunction],
            "onLoadEnd": [MockFunction],
            "onLoadStart": [MockFunction],
            "onMessage": [MockFunction],
            "originWhitelist": Array [
              "*",
            ],
            "scalesPageToFit": true,
            "source": Object {
              "uri": undefined,
            },
            "style": Object {
              "borderColor": "red",
              "borderWidth": 1,
              "flex": 1,
              "marginTop": 60,
              "opacity": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
